--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,5 @@
 {
   "name": "svelte-database-app",
-  "homepage": "http://mersey.cs.nott.ac.uk/~psxaa48/DIS-Police/frontend/dist/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "@zerodevx/svelte-toast": "^0.8.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "svelte": "^3.52.0",
